feat: add appointment DTOs and mapper, integrate with AppointmentController